<resources>
    <string name="app_name">Bill Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bill Wallet</string>
    <string name="nav_header_subtitle">lusberc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="abrir_sitio">Abrir Sitio Web</string>
    <string name="option_SignOut">Cerrar Sesión</string>

    <string name="menu_home">Capturar Foto</string>
    <string name="menu_gallery">Listado de Facturas</string>
    <string name="menu_upload">Subir desde Galeria</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="fragment_list">List</string>
    <string name="message">Message</string>

    <!-- Login Values -->
    <string name="userNameHint">Nombre de Usuario</string>
    <string name="passwordHint">Contraseña</string>
    <string name="confirmPasswordHint">Confirmar</string>
    <string name="emailHint">Correo</string>
    <string name="btnLoginText">Ingresar</string>
    <string name="btnSignUpText">Registrarse</string>
    <string name="btnSignUpNow">Registrar Usuario</string>
    <string name="btnLoginFaceB">Ingresa con Facebook</string>
    <string name="btnLoginGoogle">Ingresa con Google</string>

    <string name="btnTomarFoto">Tomar Foto</string>
    <string name="btnSubirFoto">Subir desde Galeria</string>
    <string name="btnLista">Ver mis facturas</string>
    <string name="btnConfirmar">Guardar</string>
    <string name="btnSubirNueva">Cargar otra factura</string>
    <string name="btnUicacionText">Incluir Ubicacion</string>
    <string name="lblSucess">Factura Guardada con éxito</string>

    <!-- Validations -->
    <string name="invalid_email">Correo Inválido</string>
    <string name="invalid_monto">Monto Inválido</string>
    <string name="invalid_fecha">Fecha Inválida</string>
    <string name="invalid_comercio">Comercio Inválido</string>
    <string name="invalid_passw">Contraseña Inválida</string>
    <string name="invalid_format">Formato Inválido</string>
    <string name="invalid_passwLength">Al menos 6 caracteres</string>
    <string name="invalid_confirmPassw">Contraseña Incorrecta</string>


    <string name="hint_comercio">Comercio</string>
    <string name="hint_friendlyname">Nombre de factura</string>
    <string name="hint_fecha">Fecha de Compra</string>
    <string name="hint_monto">Monto Total</string>

    <string name="loadingPage">Cargando...</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id">2064613807179614</string> <string name="fb_login_protocol_scheme">fb2064613807179614</string>

    <!-- Google Maps -->
    <string name="google_maps_key">AIzaSyCOXA1f02JZJl-H77OVUOCgu_9f9PTtI-U</string>
    <string name="title_activity_maps">Detalles Ubicacion Actual</string>
    <string name="default_info_title">Ubicacion Actual</string>
    <string name="default_info_snippet">Ubicaciones no encontradas, el permiso de localización se encuentra desactivado.</string>
    <string name="option_get_place">Obtener Ubicacion</string>
    <string name="pick_place">Seleccionar Ubicacion</string>
    <string name="inputSearchHint">Ingrese Dirección o Ciudad</string>
    <string name="btnSaveLocationHint">Guardar Ubicación</string>

    <!-- List Bills -->
    <string name="storeName">Tienda</string>
    <string name="billDate">Fecha</string>
    <string name="other">Otros</string>
    <string name="listHeader">Listado de Facturas</string>
</resources>
