<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LogIn.LoginActivity"
    android:gravity="center">

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:textAlignment="center"
        android:singleLine="true"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:textAlignment="center"
        android:layout_below="@id/txtLoginEmail"
        android:singleLine="true"
        android:layout_marginBottom="40dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLoginPassword"
        android:layout_toRightOf="@id/btnSignUp"
        android:gravity="center"
        android:text="@string/btnLoginText" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLoginPassword"
        android:gravity="center"
        android:text="@string/btnSignUpText" />

    <Button
        android:id="@+id/btnFacebook"
        android:background="#3B5998"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/btnLoginFaceB"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:layout_below="@id/btnSignUp"
        android:layout_marginTop="20dp"/>

    <com.google.android.gms.common.SignInButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/btnGoogle"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        app:buttonSize="wide"
        app:colorScheme="dark"
        android:layout_below="@id/btnFacebook"
        android:layout_marginTop="20dp"/>
</RelativeLayout>