<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LogIn.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/txtSignEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/txtSignPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:textAlignment="center"
            android:layout_below="@id/txtSignEmail"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/txtConfirmSignPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPasswordHint"
            android:textAlignment="center"
            android:layout_below="@id/txtSignPassword"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnSignUpNow"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtConfirmSignPassword"
            android:gravity="center"
            android:text="@string/btnSignUpNow"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

</LinearLayout>
