<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_green_dark"
    tools:context=".Fragments.Fragment2">

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:hint="@string/hint_comercio"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/txtFechaCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/txtResult"
        android:gravity="center"
        android:hint="@string/hint_fecha"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/txtMontoTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/txtFechaCompra"
        android:gravity="center"
        android:hint="@string/hint_monto"
        android:textSize="24sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMontoTotal">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_message"
            android:textSize="26dp"
            android:gravity="center"
            android:hint="@string/message"/>
    </android.support.design.widget.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fgmt2_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:clickable="true"
        android:src="@drawable/ic_menu_send" />



</RelativeLayout>