<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LogIn.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/usernameHint"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:textAlignment="center"
            android:layout_below="@id/txtUserName"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPassword"
            android:gravity="center"
            android:text="@string/btnLoginText"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:gravity="center"
            android:text="@string/btnSignUpText"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

</LinearLayout>
