<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/expressionCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_List_View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAppBackground">

            <TextView
                android:id="@+id/txtStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storeName"
                android:layout_alignParentLeft="true"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/txtBillDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/billDate"
                android:textSize="16dp"
                android:layout_below="@+id/txtStore"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/txtOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="16dp"
                android:layout_below="@+id/txtBillDate"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btnDeleteBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:fabCustomSize="60dp"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_delete"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>